project/node/front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: xxx
    namespace: dev
spec:
    selector:
        app: xxx
    type: ClusterIP
    ports:
       - protocol: TCP
         targetPort: 80
         port: 80
